--- a/Biblio.org
+++ b/Biblio.org
@@ -314,6 +314,8 @@
 
 
     The follow-up paper, \citep{ratliff2007boosting} does not change the $J$ function. The improvment made by this paper (boosting in new features) can however be ported to other settings.
+
+    An applicative paper, \citep{ratliff2007imitation} presents the same algorithm (cast as a multi class label problem) with some impressive real life robotics applications.
 *** PM
     The Policy Matching algorithm was described by the same authors as the survey. Therefore I assumed there were faithful and I did not cross check their transcription either.
 
