--- a/Biblio.org
+++ b/Biblio.org
@@ -384,8 +384,10 @@
 
    \citet{chajewska2001learning}'s work acknowledge \citet{ng2000algorithms} work and uses it for comparison purpose. However, the approach they suggest leads (if I read correctly) to the same $J$ function and the same algorithm as in \citep{ramachandran2007bayesian}, only 6 years earlier. I don't know why this paper has not been acknowledged by the IRL community. Maybe the framing of the problem as a decision tree (and not an MDP) and the use of unusual keywords were enough for it to stay unnoticed.
    
-* Learning from Observation
+* Learning from Observation/Demonstration
   Une tentative d'unification est présentée en \cite{montana2011towards}. Autant le survey est utile, autant je reste circonspect tant aux maths du papier, qui laissent un peu l'IRL à l'écart en ne tenant pas compte du fait que les états respectent le critère de Markov. A revérifier.
+
+  Un papier applicatif assez sympa, \citep{leon2011teaching}, fait un survey du domaine et combine ces méthodes avec celles consistant à intégrer du feedback humain dans du RL pour réussir une expérience de déplacement d'objet par un bras robotisé en utilisant du matériel grand public (un kinect).
 * Feature Selection
   \citep{saxe2010random} montre que lorsque l'on utilise des /convolutional pooling architectures/, le poids importe moins que l'architecture, et propose en conséquence de déterminer la meilleure architecture en se basant sur ses performances à poids aléatoires.
 
